	-> bug fix: closing export dialog immediately after opening caused an exception (widget disposed)
	-> config.properties logHttp setting: enable to get full INFO level HTTP traffic log in console and log file 
	-> implement scrollbar mode for canvas and set it to default scrolling mode 
	-> convert from tables to simple textregions for all cells without losing lines and their transcriptions (via "Metadata->Structural" tab)
	-> CITlab HTR+ basic integration
	 
1.5.1
	-> bugfix: UI crashed when opening advanced error rate tool and switching page afterwards
	
1.5.2
	-> bugfix: user could not edit last line if empty (index out of bounds exception)

1.5.3
	-> bugfix: nullpointer exception when merging table cells
	-> bugfix: disable automatic bidi processing, which is broken and leads to a program crash, and let the user manually switch between left-to-right and right-to-left orientation
	-> bugfix: fix broken baseline merging when merging lines with words
	-> bugfix: fix broken client side export (update saxon version)
	-> keep zoom when switching between pages
	-> bugfix: unable to add some unicode values to virtual keyboard
	
1.5.4
	-> bugfix: broken image display on Linux systems
	-> enhancement/bugfix: remove unused jars from libs folder on program start
	
1.5.5
	-> Displayed images are rotated according to EXIF orientation tag value
	-> support user defined empty tags (like the <gap/> tag)
	-> support java versions > 8 
	-> bugfix: virtual keyboard shortcut issues
	-> add login btn to toolbar
	-> bugfix: clear doc table filter when loading another collection
	-> bugfix: Speed up 'Add page(s) to document' in document manager
	-> Enable export of versions created by some 'tool', User get selection of all 'toolnames' which have run on that document
	-> User activity: Shows a edit history per collection - more specifically sees the latest 'saves' and 'status changes' for each page and can also load that page with double click
	
	