@@ -627,5 +627,6 @@ CHANGES AND BUGFIXES
 	-> bugfix: Speed up 'Add page(s) to document' in document manager
 	-> Enable export of versions created by some 'tool', User get selection of all 'toolnames' which have run on that document
 	-> User activity: Shows a edit history per collection - more specifically sees the latest 'saves' and 'status changes' for each page and can also load that page with double click
+	-> 'Compare Text Differences Tool' does not block, and (if wished) it shows the line numbering like the text editor
 	
 	
